@@ -6,13 +6,13 @@ AUX gconf-2.26.2-darwin-cant-link-module.patch 1506 RMD160 982c7d5c344a971f299dd
 AUX gconf-2.28.0-entry-set-value-sigsegv.patch 533 RMD160 77e4fae8a19a57904d9e6706238a94172da5c223 SHA1 9deb172ce170e7333931e61e3cf2ae6ade24bb33 SHA256 e58c0981491e794de05dd71562e0a9675433469e87c7149088ebea432c9619b0
 AUX gconf-2.28.0-prefix.patch 462 RMD160 9bb422f7f86363f62c15bc788d5694befb29b7a0 SHA1 d0577293d5dd469a37e9ac989fe1117a02061961 SHA256 98e551974be0d138a1f6718bc3c3f91925f3e006bc7cc19a088f90f001814eb8
 DIST GConf-3.2.5.tar.xz 1525188 RMD160 8486d5c38548f581dddfcf575a7a32145795da9c SHA1 340b3cb634ef64f0c31af9d971d4f3da95d1787c SHA256 4ddea9503a212ee126c5b46a0a958fd5484574c3cb6ef2baf38db02e819e58c6
-EBUILD gconf-3.2.5.ebuild 3213 RMD160 a7f71638f8f91994e15ab256616bece5a98d0550 SHA1 06a329c5c1ede645b33d4207ae3138b92d04736e SHA256 814ad907e4645112ebc3d21e2dd6358ec31a3c4ada56bb3acd1d0d1946bced95
-MISC ChangeLog 35741 RMD160 d24a3cc13baf39a3f608a3c1e6fa71574be4a1b4 SHA1 54ac0315c07eb239019f72371a4ba92493b60197 SHA256 368cf1c870bde62461b6b81b7d4092acc1b1a8faf9be23a600a389475e89056f
+EBUILD gconf-3.2.5.ebuild 3180 RMD160 a562914dab7a047a5385e77b13e6bf89a9f52e80 SHA1 5a1f40d22bfe828ad98c12da7e26832f0909d2b9 SHA256 bf765a8a280e19861a421cc33567f6293c7a7ec127164eff7ac3d17007d6006e
+MISC ChangeLog 35850 RMD160 ec71e9bc321ab676bf7728b440a40024311f1d68 SHA1 3750f4bfd5f95542a87108b81d4c85ad0797f5ed SHA256 91b1d8a7a72f00c61754545feabb9242ba136197e55a5d243f769a7282e005c2
 MISC metadata.xml 528 RMD160 72ffb555ed2893ad4cab16e98a8b78ac234efb3b SHA1 8260846fab125a9132012ac5de4f217af97c8370 SHA256 ea091b9834e15c95b73eb692468c72deca61f4e2170ce5cdad77c175cbeb7aa9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+3cYIACgkQX3X2B8XHTom6yQCfVGTF4IeBrzi3UuAwPzdwpnFT
-k/0AoKI5BgvSwCUJbMZCmERXw040ajyG
-=UBJN
+iEYEARECAAYFAk/CCh4ACgkQX3X2B8XHTon8EQCeK/ZzKcF9Q0z4KvEr6ayZbnIW
++HUAnRMJgKKpRiO6XsmbxMOZhduK/m0J
+=3Z3j
 -----END PGP SIGNATURE-----
